--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@ limitations under the License.
     <artifactId>jsoup</artifactId>
     <version>1.10.2</version>
   </dependency>
+   <dependency>
+     <groupId>com.google.api-client</groupId>
+     <artifactId>google-api-client</artifactId>
+     <version>1.22.0</version>
+   </dependency>
 
  
     <!-- Test Dependencies -->
