--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>HelloAppEngine</servlet-name>
-    <url-pattern>/hello</url-pattern>
+    <url-pattern>/quiz</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
